[tool.poetry]
name = "housing-analysis"
version = "0.1.0"
description = ""
authors = ["Edoardo Picazio <edoardopicazio02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
