[tool.poetry]
name = "housing-analysis"
version = "0.1.0"
description = ""
authors = ["Edoardo Picazio <edoardopicazio02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
numpy = "^1.17.0"
matplotlib = "^3.9.3"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
pymc = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
